Fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ label span:before {
     background-color: black;
     font: 20px sans-serif;
     border-radius: 25px;
-    padding: 10px;
+    padding-left: 40px;
     border: 5px ridge cornflowerblue;
     width: 490px;
     height: 570px;
@@ -102,7 +102,7 @@ label span:before {
 
 .container2 {
     display: grid;
-    padding-left: 70px;
+    padding-left: 60px;
     grid: 180px / auto auto auto;
 }
 
@@ -131,16 +131,16 @@ label span:before {
 }
 
 .pietext {
-    height: 300px;
+    height: 230px;
     overflow-y: scroll;
-}
-
-.pietextfixed {
-    height: 10px;
 }
 
 .piechart {
     width: 280px;
+}
+
+.column2 {
+    padding-left:20px;
 }
 
 .devgen {
@@ -163,3 +163,19 @@ form.l {
     display: inline-block;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    border: 0px ridge cornflowerblue;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: cornflowerblue;
+    border-radius: 10px;
+}
